# fastAPI-tutorial

./: README.md  pyproject.toml
fastapi_tutorial/: .env  alembic.ini  main.py
fastapi_tutorial/migrations/: env.py
fastapi_tutorial/models/: models.py
